Добавление mysql сервера, замеена _ на - в именах файлов

--- a/tc_helm_chart/templates/secrets.yaml
+++ b/tc_helm_chart/templates/secrets.yaml
@@ -4,6 +4,14 @@ kind: Secret
 metadata:
   name: {{ .Values.name }}-secret
 type: Opaque
+{{- if .Values.stringdata }}
 stringData:
-  id_ed25519: {{ .Values.secret.privatekey -}}
+  id_ed25519: {{ .Values.stringdata.secret.privatekey -}}
+{{- end }}
+{{- if .Values.data }}
+data:
+  {{- range $key, $val := .Values.data }}
+  {{ $key }}: {{ $val }}
+  {{- end }}
+{{- end }}
 {{- end }}
