--- a/tc_helm_chart/mysql-values.yaml
+++ b/tc_helm_chart/mysql-values.yaml
@@ -33,5 +33,5 @@ volumeMounts:
 volumes:
   - name: mysql-volume
     hostPath:
-      path: /mnt/tc_data
+      path: /mnt/mysql_data
       type: DirectoryOrCreate
