--- a/tc_helm_chart/tc-values.yaml
+++ b/tc_helm_chart/tc-values.yaml
@@ -1,15 +1,10 @@
 image: "jetbrains/teamcity-server:2024.07.2"
 name: teamcity-server
 
-secret:
-  enabled: true
-
 env:
 - name: MYSQL_PASSWORD
-  valueFrom:
-    secretKeyRef:
-      name: teamcity-server-secret
-      key: password
+  sname: teamcity-server-secret
+  skey: password
 
 servicePorts:
   - port: 80
@@ -51,13 +46,13 @@ ingress:
     number: 80
 
 database:
-#  type: mysql # или postgres в зависимости от вашей базы данных (mysql или postgresql)
-#  host: mysql-server # имя сервиса для MySQL или postgresql для PostgreSQL 
+  type: mysql # или postgres в зависимости от вашей базы данных (mysql или postgresql)
+  host: mysql-server # имя сервиса для MySQL или postgresql для PostgreSQL 
   port: 3306 # или 5432 для PostgreSQL 
   name: teamcity # имя базы данных, созданной ранее 
   user: teamcity # пользователь базы данных 
 
-configmap:
+configMap:
   datadirConfig:
     database.properties: |
       connectionUrl=jdbc:mysql://{{ $.Values.database.host }}/{{ .Values.database.name}}?allowPublicKeyRetrieval=true&useSSL=false
